# ISC-Challenge-Without-Boost

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.txt  README.md
cmake_modules/: boost.cmake  spdlog.cmake
cmake_modules/configure_vcpkg/: ConfigureVCPKG.cmake
cmake_modules/configure_vcpkg/scripts/: configure_vcpkg.bat  configure_vcpkg.sh  lipo-dir-merge.py
node/: CMakeLists.txt  main.cpp
node/include/: logger.h  message.h  node.h  tcp_socket.h
node/src/: logger.h  message.h  node.cpp  node.h  tcp_socket.cpp  tcp_socket.h
node/tests/: CMakeLists.txt  node_tests.cpp
router/: CMakeLists.txt  main.cpp
router/include/: logger.h  member_session.h  message.h  router.h  session.h  sessions.h  signaling_queue.h  tcpserver.h
router/src/: logger.h  member_session.cpp  member_session.h  router.cpp  router.h  sessions.cpp  tcpserver.cpp
tests/: CMakeLists.txt  node_tests.cpp
